<resources>
    <string name="app_name">MathsEducationApplication</string>
    <string name="textViewEnterYourName">Enter your name</string>
    <string name="textViewPleaseEnterYourName">Please enter your name to continue</string>
    <string name="textViewName">Name</string>
    <string name="buttonStart">Start</string>
    <string name="textViewWelcome">Welcome</string>
    <string name="buttonStartTest">Start Test</string>
    <string name="buttonAdminSection">Admin Section</string>
    <string name="buttonSubmit">Submit</string>
    <string name="textViewCongratulations">Congratulations,</string>
    <string name="textViewYouScored">You Scored:</string>
    <string name="buttonBackToDashboard">Back to Dashboard</string>
    <string name="textViewAdminCredentials">Enter admin credentials</string>
    <string name="textViewAdminNameAndPassword">Please enter admin name and password to continue</string>
    <string name="textViewAdminPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="textViewAdminSection">Admin Section</string>
    <string name="buttonAddQuestion">Add Question</string>
    <string name="buttonRemoveQuestion">Remove Question</string>
    <string name="buttonViewQuestionsAndAnswers">View Questions With Answers</string>
    <string name="buttonAddAnswer">Add Answer</string>
    <string name="buttonViewAnswers">View Answers</string>
    <string name="buttonAddAdmin">Add Admin</string>
    <string name="buttonRemoveAdmin">Remove Admin</string>
    <string name="buttonViewAdmins">View Admins</string>
    <string name="textViewAddQuestion">Add Question</string>
    <string name="textViewQuestion">Question</string>
    <string name="textViewCorrectAnswer">Correct Answer</string>
    <string name="textViewIncorrectAnswer">Incorrect Answer</string>
    <string name="textViewQuestionAndAnswers">Enter Question and Answers</string>
    <string name="textViewQuestionAndAnswers2">Enter a Question and Answer as well as 4 incorrect Answers</string>
    <string name="buttonAddQuestionAndAnswer">Add Question and Answer</string>
    <string name="textViewViewQuestionsWithAnswers">Questions with Answers</string>
    <string name="textViewEnterAnswer">Enter Answer</string>
    <string name="textViewEnterAnswerInfo">These answers will be used as incorrect random answers</string>
    <string name="textViewAnswer">Answer</string>
    <string name="textViewAnswers">Answers Pool</string>
    <string name="buttonRemoveAnswer">Remove Answer</string>
    <string name="textViewUsers">Users</string>
    <string name="textViewEnterPassword">Enter User Password</string>
    <string name="textViewEnterPasswordInfo">Once a user has been selected, set a password</string>
    <string name="textViewPassword">Password</string>
    <string name="buttonMakeAdmin">Make Admin</string>
    <string name="textViewAdmins">Admins</string>
    <string name="textViewGraphError">This graph is empty, complete a test to fill it!</string>
    <string name="textViewEmptyQuestionsAndAnswersListView">There are currently no questions or answers available</string>
    <string name="textViewEmptyAnswersListView">There are currently no answers available</string>
    <string name="textViewEmptyAdminsListView">There are currently no admins available</string>
    <string name="textViewEmptyUsersListView">There are currently no users available</string>
</resources>