<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UserActivity">

    <RelativeLayout
        android:id="@+id/relativeLayoutPassword"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterPasswordInfo">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewPassword"
            android:textColor="#616161" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textViewEnterPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="113dp"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:text="@string/textViewEnterPassword"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEnterPasswordInfo"
        android:layout_width="344dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="35dp"
        android:background="@android:color/transparent"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        android:text="@string/textViewEnterPasswordInfo"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterPassword" />

    <TextView
        android:id="@+id/textViewUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="163dp"
        android:text="@string/textViewUsers"
        android:textColor="#424242"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsers">

        <ListView
            android:id="@+id/listViewUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#F19B1A"
            android:dividerHeight="2dp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMakeAdmin"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="143dp"
        android:background="@drawable/button"
        android:onClick="makeAdmin"
        android:text="@string/buttonMakeAdmin"
        android:textColor="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>