<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AdminLoginActivity">

    <TextView
        android:id="@+id/textViewAdminNameAndPassword"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="39dp"
        android:background="@android:color/transparent"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        android:text="@string/textViewAdminNameAndPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdminCredentials" />

    <TextView
        android:id="@+id/textViewAdminCredentials"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="9dp"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:text="@string/textViewAdminCredentials"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/adminNameRelativeLayout"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextAdminUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewAdminName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewName"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/adminPasswordRelativeLayout"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminNameRelativeLayout">

        <EditText
            android:id="@+id/editTextAdminPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewAdminPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewAdminPassword"
            android:textColor="#616161" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="162dp"
        android:background="@drawable/button"
        android:onClick="login"
        android:text="@string/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPasswordRelativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>