<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/button_start"
        android:onClick="start"
        android:text="@string/buttonStart"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewPleaseEnterYourName"
        android:layout_width="244dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="135dp"
        android:background="@android:color/transparent"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        android:text="@string/textViewPleaseEnterYourName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterYourName" />

    <TextView
        android:id="@+id/textViewEnterYourName"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="122dp"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:text="@string/textViewEnterYourName"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPleaseEnterYourName">

        <EditText
            android:id="@+id/editTextStudentName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewName"
            android:textColor="#616161" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>