<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddQuestionActivity">

    <TextView
        android:id="@+id/textViewAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="104dp"
        android:text="@string/buttonAddQuestion"
        android:textColor="#424242"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestionAndAnswers"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="9dp"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:text="@string/textViewQuestionAndAnswers"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestionAndAnswers2"
        android:layout_width="370dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="9dp"
        android:background="@android:color/transparent"
        android:paddingLeft="6dp"
        android:paddingBottom="10dp"
        android:text="@string/textViewQuestionAndAnswers2"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionAndAnswers" />

    <RelativeLayout
        android:id="@+id/relativeLayoutQuestion"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionAndAnswers2">

        <EditText
            android:id="@+id/editTextQuestion"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewQuestion"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutCorrectAnswer"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutQuestion">

        <EditText
            android:id="@+id/editTextCorrectAnswer"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewCorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewCorrectAnswer"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutIncorrectAnswer1"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutCorrectAnswer">

        <EditText
            android:id="@+id/editTextIncorrectAnswer1"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewIncorrectAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewIncorrectAnswer"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutIncorrectAnswer2"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutIncorrectAnswer1">

        <EditText
            android:id="@+id/editTextIncorrectAnswer2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewIncorrectAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewIncorrectAnswer"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutIncorrectAnswer3"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutIncorrectAnswer2">

        <EditText
            android:id="@+id/editTextIncorrectAnswer3"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewIncorrectAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewIncorrectAnswer"
            android:textColor="#616161" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutIncorrectAnswer4"
        android:layout_width="346dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutIncorrectAnswer3">

        <EditText
            android:id="@+id/editTextIncorrectAnswer4"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="14dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewIncorrectAnswer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingBottom="5dp"
            android:text="@string/textViewIncorrectAnswer"
            android:textColor="#616161" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddQuestionAndAnswer"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginStart="141dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="142dp"
        android:background="@drawable/button"
        android:onClick="submitQuestionsAndAnswers"
        android:text="@string/buttonAddQuestionAndAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayoutIncorrectAnswer4" />

</androidx.constraintlayout.widget.ConstraintLayout>